refactor: general changes in a few files
